added user post, put, and delete endpoints
